--- a/.htaccess
+++ b/.htaccess
@@ -6,11 +6,11 @@
 <IfModule mod_rewrite.c>
 RewriteEngine On
 RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
-RewriteBase /Deeprivers.net/
+RewriteBase /Deeprivers/
 RewriteRule ^index\.php$ - [L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule . /Deeprivers.net/index.php [L]
+RewriteRule . /Deeprivers/index.php [L]
 </IfModule>
 
 # END WordPress
